# cloud_image_segmentation

./: .gitignore  CITATION.cff  README.md  eda_images.py  keras_image_loading.py  keras_train_seg.py  preprocess_dataset.py  pyproject.toml  test.py  train_seg_model.py  utils.py
tensorflow_vgg/: preprocess_dataset.py  pyproject.toml  test.py  train.py  train_seg_model.py
torch_hf_mit_b0/: Dataloader.py  evaluation.py  hf_mitb0_preproocess.py  hf_segformer_preprocess.py  requirements.txt  runpod_requirements.txt  test.py  train.py  visualization.py
torch_segformer/: Dataloader.py  man_feature_eng.py  pyproject.toml  requirements.txt  runpod_requirements.txt  test.py  train.py  visualization.py
