[project]
name = "torch-segformer"
version = "0.1.0"
description = "Pytroch segformer transfer learning for cloud segmentation on satellite images"
authors = [
    {name = "Dominik Irimi",email = "dominik.irimi@protonmail.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "glob2 (>=0.7,<0.8)",
    "albumentations (>=2.0.8,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
